--- a/corrected-forward-rate-calculation.html
+++ b/corrected-forward-rate-calculation.html
@@ -149,7 +149,7 @@
         // Market data from your example
         const INTEREST_RATES = {
             USD: 0.0450, // 4.50%
-            INR: 0.0650  // 6.50%
+            INR: 0.0550  // 5.50% (CORRECTED from 6.50%)
         };
 
         const yourData = {
