--- a/pnl-formulas-analysis.html
+++ b/pnl-formulas-analysis.html
@@ -217,7 +217,7 @@
 
         const INTEREST_RATES = {
             USD: 0.0450, // 4.50%
-            INR: 0.0650  // 6.50%
+            INR: 0.0550  // 5.50% (CORRECTED from 6.50%)
         };
 
         const contractAmount = 500000; // $500,000
